# fem-2d

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
examples/: frame1.py  frame2.py  hw4.py  rough.py  trial.ipynb
examples/linear/: beam_4_11.py  beam_5_6.py  beam_spring.py  frame0.py  frame1.py  frame_5_1.py  frame_5_1_v2.py  frame_5_2.py  frame_6_7.py  frame_7_1.py  spring_2_1.py  truss1.py  truss_logan.py
examples/non_linear/: beam.py  beam_buckling.py  truss.py  truss_10_2.py
fem2d/: __init__.py  buckling_analysis.py  loads.py  materials.py  nodes.py  results.py  sections.py  solver.py  structure.py
fem2d/elements/: __init__.py  beam.py  beamNL.py  beam_hinges.py  element.py  spring.py  truss.py  trussNL.py
fem2d/utils/: __init__.py  draw_structure.py  simple_frame.py
notebooks/: beam_with_hinge.ipynb  fem2d_examples_showcase.ipynb  frame_with_hinge.ipynb
tests/: test_buckling.py  test_linear.py  test_non_linear.py
